--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="bessy.png" type="image/png">
 
-  <title>Bessify</title>
+  <title>Beshiefy</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
